--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
+    "joi": "^17.11.0",
     "pg": "^8.11.3",
     "sequelize": "^6.35.1"
   }
